total of time played
