# server/public/swagger.json
@@ -716,6 +716,43 @@
 				]
 			}
 		},
+		"/gameHistories/total/gameTime/{id}": {
+			"get": {
+				"operationId": "GetTotalGametimeByUserId",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "number",
+									"format": "double"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"GameHistories"
+				],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
 		"/auth": {
 			"post": {
 				"operationId": "Authenticate",
